# hackathon-3

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  hackathon_overview.md  local_chronicle.db  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.speckit/: architecture.md  constitution.md  design.md  plan.md  specify.md  tasks.md  testing_strategy.md
.speckit/prompts/: system_prompt.txt
agentic_workflow/: bootstrap_project.py  continuous_qa_loop.py  developer_reviewer.py  devops_security.py  eval_config.json  product_planner.py  spec_driven_dev.py  stress_eval_loop.py
backend/: config.py  database.py  llm_transformer.py  logger.py  orchestrator.py  parsers.py
chronicle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dummy_files/: test.docx  test.md  test.pptx
frontend/: cli.py
scripts/: bootstrap_offline_models.py
src/: cli.py  config.py  database.py  exceptions.py  llm_transformer.py  logger.py  orchestrator.py  parsers.py
src/chronicle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: generate_dummy_files.py  test_all_parsers.py  test_backend.py  test_cli.py  test_imports.py  test_mock_orchestrator.py
tests/dummy_files/: test.xlsx
